# bello-mini-bot

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  test_litellm_proxy.py
docker/: Dockerfile
docker/litellm/: config_template.yaml
src/app/: app.py  embedding.py  model.py  server.py  settings.py  thought.py
src/app/agent/: doc_agent.py  doc_rag.py
src/app/embeddings/: __init__.py  openai.py
src/app/llms/: __init__.py  openai.py
